--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@
     box-sizing: border-box;
 }
 
-.debug{
-    border: 1px solid black;
+
+
+body{
+    background-color: black;
+    
+
 }
 
 /*header*/
@@ -59,10 +63,58 @@ img{
     width: 100%;
     height: 100%;
 }
-.container-foot{
+/* bottom-bar*/
+.bottom-bar{
+    position: fixed;
+    bottom: 0;
+    font-size: 14px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    color: white ;
+    background-color: #4a4a4a;
+    align-items: center;  
+    
+}
 
+.bottom-section{
+    margin: 8px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    text-align: center;
+    
+}
+.box-symbol{
+    margin-left: 22px;
+}
+.size-arrow{
+    font-size: 14px;
+    position: absolute;
+    top: 20px;
+    right: -18px;  
+}
+.size-arrow2{
+    font-size: 14px;
+    position: absolute;
+    top: 20px;
+    right: 38px;  
+}
+.green-share{
+    color: greenyellow;
+}
+.symbol{
+    font-size: 30px;
+    position:relative;  
+}
+
+.box-end{
+    
+    
+    color: red;
+    background-color: beige;
+    
+    
+    
 }
